--- a/src/style/main.css
+++ b/src/style/main.css
@@ -4,15 +4,67 @@ body {
   padding: 0;
 }
 
+/* @font-face {
+   font-family: fontLight;
+   src: url("./Swiss_721_Light.otf"), format("opentype");
+ }
+
+ @font-face {
+   font-family: fontHeavy;
+   src: url("./Swiss_721_Heavy.otf"), format("opentype");
+ } */
+
 body {
   width: 100vw;
+  background: #334152;
+
+  font-family: "Arial";
 }
 
 .topBar {
   height: 3em;
   width: 100%;
-  background: #280469;
+  background: #009b91;
 
   display: flex;
   align-items: center;
+  justify-content: center;
+
+  z-index: 0;
 }
+
+.mirrorGame {
+  display: flex;
+  justify-content: center;
+}
+
+/* .tutorial {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
+.tutorial-card {
+  background: #009b91;
+  color: white;
+
+  position: absolute;
+
+  border-radius: 1em;
+
+  transition: left 2s, top 2s, width 2s, height 2s;
+}
+
+.tutorial-card > * {
+  margin: 1em;
+}
+
+svg {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+} */
