--- a/src/style/main.css
+++ b/src/style/main.css
@@ -14,6 +14,7 @@ body {
    src: url("./Swiss_721_Heavy.otf"), format("opentype");
  } */
 
+ /* #d9e5ec hellblau */
 body {
   width: 100vw;
   background: #334152;
