--- a/src/style/main.css
+++ b/src/style/main.css
@@ -14,7 +14,7 @@ body {
    src: url("./Swiss_721_Heavy.otf"), format("opentype");
  } */
 
- /* #d9e5ec hellblau */
+/* #d9e5ec hellblau */
 body {
   width: 100vw;
   background: #334152;
@@ -41,6 +41,147 @@ body {
 
 .controls {
   display: flex;
+}
+
+.popup-btn > button {
+  background: rgba(217, 229, 236, 0.5);
+  font-size: 1em;
+  /* margin: 0.5em; */
+}
+
+.popup-size {
+  width: 10em;
+  height: 10em;
+}
+
+.play-btn {
+  border-radius: 1em;
+  border: none;
+  background: #4f46e5;
+  font-weight: bold;
+  color: white;
+}
+
+.level-select{
+  border-radius: 1em;
+  border: none;
+  background: #4f46e5;
+  font-weight: bold;
+  color: white;
+}
+
+/* media query size */
+.range_slider {
+}
+
+@media screen and (min-width: 1000px) {
+  .range_slider {
+  }
+}
+@media screen and (max-width: 1000px) {
+  .range_slider {
+    width: 20%;
+  }
+}
+
+.switch {
+  height: 100px;
+  position: fixed;
+  right: 50px;
+  top: 50px;
+}
+
+.slider-switch {
+  display: inline-block;
+  height: 34px;
+  position: relative;
+  width: 60px;
+}
+
+.slider-switch input {
+  display: none;
+}
+
+.slider {
+  background-color: yellow;
+  bottom: 0;
+  cursor: pointer;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  transition: 0.4s;
+}
+
+.slider:before {
+  background-color: #fff;
+  bottom: 4px;
+  content: "";
+  height: 26px;
+  left: 4px;
+  position: absolute;
+  transition: 0.4s;
+  width: 26px;
+}
+
+/* input:checked + .slider {
+  background: rgb(255,0,0);
+background: linear-gradient(150deg, rgba(255,0,0,1) 0%, rgba(0,0,255,1) 100%);
+} */
+
+input:checked + .slider:before {
+  transform: translateX(26px);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+input:checked + .slider {
+  background: linear-gradient(316deg, #ff0000, #0000ff);
+  background-size: 400% 400%;
+
+  -webkit-animation: ParticleColorAnimation 2s ease infinite;
+  -moz-animation: ParticleColorAnimation 2s ease infinite;
+  animation: ParticleColorAnimation 2s ease infinite;
+}
+
+@-webkit-keyframes ParticleColorAnimation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+@-moz-keyframes ParticleColorAnimation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
+@keyframes ParticleColorAnimation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 /* .tutorial {
