test: touch-action: none

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -22,8 +22,10 @@ body {
   font-family: "Arial";
 
   overscroll-behavior: contain;
+  touch-action: none;
 }
 
+/* doesnt work */
 .body-no-pan{
   touch-action: none;
 }
