fix: beam_loop recursion max depth; fix: next level button; test: orientation lock:

--- a/src/style/main.css
+++ b/src/style/main.css
@@ -21,11 +21,10 @@ body {
 
   font-family: "Arial";
 
-  
   touch-action: pinch-zoom;
 }
 
-/* doesnt work */
+/* name isnt accurate, but whatever*/
 .body-no-pan{
   overscroll-behavior: contain;
 }
